fix header logo on safari

--- a/client/src/ui/atoms/logo/index.scss
+++ b/client/src/ui/atoms/logo/index.scss
@@ -6,6 +6,10 @@
   height: 32px;
   width: 116.35px;
 
+  svg {
+    width: 100%;
+  }
+
   @media #{layout.$mq-small-desktop-and-up} {
     height: 65px;
     width: 200px;
